--- a/app/app.html
+++ b/app/app.html
@@ -11,7 +11,8 @@
   <style> body{padding:0; margin:0;} </style>
 <div class="topnav">
     <button class="btn browser">Browser</button>
-    <button class="mini" >+</button>
+    <input class="inp" type="text" placeholder="Neurons"></input>
+    <button class="btn browser" >Add Layer</button>
     <div style="text-align: center;">
         <!-- <div class="specCol">
             <p class="spec">Gen Time: 64 ms</p>
