--- a/app/app.html
+++ b/app/app.html
@@ -9,8 +9,9 @@
 <body bgcolor="#062532" style="-webkit-app-region: drag">
   <style> body{padding:0; margin:0;} </style>
 <div class="topnav">
-    <button class="btn browser">Browser</button>
-    <button id="myBtn" class="btn browser" >Add Layer</button>
+    <button style="margin-left: 1%" class="btn top">Browser</button>
+    <button id="myBtn" class="btn top" >Add Layer</button>
+    <button id="reset" class="btn top">Reset</button>
     <div style="text-align: center;">
         <!-- <div class="specCol">
             <p class="spec">Gen Time: 64 ms</p>
